--- a/.tmux/Makefile
+++ b/.tmux/Makefile
@@ -7,12 +7,12 @@ RUN=run.conf
 DEBUG=debug.conf
 
 run:
-	-$(TMUX) new-session \; source-file $(RUN)
+	$(TMUX) new-session \; source-file $(RUN)
 
 stop:
 	make stop -C $(QEMU_DIR)
-	for i in $$(ps ax | grep $(TMUX) | grep -v grep | awk '{print $$1}'); do kill $$i; done
+	for i in $$(ps ax | grep $(TMUX) | grep -v grep | grep -v make | awk '{print $$1}'); do kill $$i; done
 
 debug:
-	-$(TMUX) new-session \; source-file $(DEBUG)
+	$(TMUX) new-session \; source-file $(DEBUG)
 
